<resources>
    <string name="app_name">Repertoire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name_hint">Song Name</string>
    <string name="add_btn_text">Add</string>
    <string name="update_btn_text">Update</string>
    <string name="song_artist_hint">Artist</string>
    <string name="textView">text</string>
    <string name="song_status_hint">Learned</string>
    <string name="song_id_hint">#001</string>
    <string name="update_song">Update song</string>
    <string name="delete_song">Delete</string>
    <string name="delete_song_message">Delete this song?</string>
    <string name="cancel_message">Cancel</string>
    <string name="confirm_message">Yes</string>
    <string name="ok_message">OK</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="sort_song">Sort</string>
    <string name="sort_by_alpha">Ascending / Descending</string>
    <string name="add_song_fab">Add Song</string>
    <string name="not_started_tab">Not Started</string>
    <string name="in_progress_tab">In Progress</string>
    <string name="learned_tab">Learned</string>
    <string name="not_started_count_txt">  Not Started</string>
    <string name="in_progress_count_txt">  In Progress</string>
    <string name="learned_count_txt">  Learned</string>
    <string name="card_image_desc">card image</string>
    <string name="info">Info</string>
    <string name="song_count_text">Song count</string>
    <string name="play_video">Play video</string>
    <string name="song_link_hint">Link</string>
    <string name="play_video_fullscreen">Watch fullscreen</string>
    <string name="copy_songs_text">Copy songs</string>
    <string name="item_empty_link_text">This item has no link</string>
    <string name="add_a_link_text">Add a link</string>
    <string name="total_txt">Total</string>
</resources>