<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.add.AddFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/song_name_hint"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_artist_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/song_artist_hint"/>

        <Spinner
            android:id="@+id/spinner_song_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/button_add_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/add_btn_text"/>
    </LinearLayout>

</layout>
