<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".fragments.list.ListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_not_started"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_started_tab"
                    android:icon="@drawable/ic_not_started"
                    />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_in_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_progress_tab"
                    android:icon="@drawable/ic_in_progress"
                    />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_learned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learned_tab"
                    android:icon="@drawable/ic_learned"
                    />

            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_add_24"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_song_fab" />

    </RelativeLayout>
</layout>
